# hdf5-io

./: Cargo.toml  README.md  TODO.md
src/: checksum.rs  chunk.rs  dataspace.rs  datatype.rs  error.rs  file.rs  global_heap.rs  io.rs  layout.rs  lib.rs  link.rs  superblock.rs
src/btree2/: mod.rs
src/filters/: mod.rs
src/fractal_heap/: mod.rs
src/object_header/: messages.rs  mod.rs
src/writer/: dataset_node.rs  dense_attrs.rs  encode.rs  file_writer.rs  serialize_compat.rs  tests.rs  types.rs
tests/: read_fixtures.rs
tests/fixtures/: array.h5  big_endian.h5  btree_v2_chunks.h5  chunked_btree_v1.h5  chunked_deflate_v3.h5  committed_datatype.h5  compact_v2.h5  complex.h5  compound.h5  creation_order.h5  dense_attributes.h5  ea_large.h5  edge_chunks.h5  empty_chunked.h5  enum.h5  extensible_array.h5  fheap_indirect_simple.h5  fill_value.h5  filtered_fheap.h5  fletcher32.h5  gen_fixtures  gen_fixtures.c  implicit_chunks.h5  nbit.h5  nested_groups_v2.h5  scaleoffset.h5  shared_attr.h5  shuffle_deflate_v3.h5  simple_contiguous_v2.h5  szip_compressed.h5  vlen_sequence.h5  vlen_strings.h5
